fix(api): use POST's body to pass password instead of insecure DELETE's query
