# beetle-quest/api/rest/v1/openAPI.yaml
@@ -204,7 +204,7 @@ paths:
                     description: Status not found.
                 500:
                     description: Internal server error.
-        delete:
+        post:
             summary: Delete user account
             tags: [Users]
             security:
@@ -218,6 +218,16 @@ paths:
                   required: true
                   schema:
                       type: string
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                password:
+                                    type: string
+                                    description: The user's password
             responses:
                 303:
                     description: Status see other (redirect to login).
@@ -461,7 +471,7 @@ paths:
                     description: Status not found.
                 500:
                     description: Internal server error.
-        delete:
+        post:
             summary: Delete auction
             tags: [Market]
             security:
@@ -475,11 +485,17 @@ paths:
                   required: true
                   schema:
                       type: string
-                - name: password
-                  in: query
-                  required: true
-                  schema:
-                      type: string
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                password:
+                                    type: string
+                                    description: The user's password
+
             responses:
                 200:
                     description: Auction deleted successfully.
